# VitaPopsCompat

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: vitaflash.h
rebootex/: CMakeLists.txt  Makefile  patches.c
rebootex/.deps/: patches.Po
src/: popsdisplay.c  syspatch.c  vitaflash.c
